--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body{
-   background: url(/imgs/fondo.png);
+   background: url("/imgs/fondo.png");
    font-family: 'Poppins', sans-serif; 
    font-family: 'Cinzel', serif;
   
