--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 body{
-   background: url('./imgs/fondo.png');
+   background: url('../imgs/fondo.png');
    font-family: 'Poppins', sans-serif; 
    font-family: 'Cinzel', serif;
   
@@ -23,7 +23,7 @@ body{
     align-self: flex-start;
     width: 100%;
     height: 80vh;
-    background: url('./imgs/banner.png');   
+    background: url('../imgs/banner.png');   
     background-repeat: no-repeat;    
     z-index: -10;    
 }
